[package]
name = "home_server"
version = "0.1.0"
authors = ["Quentin Boyer <qbsecond@gmail.com>"]
edition = "2018"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.1.0-alpha.3"
bytes = "0.4.12"
prost = "0.5.0"
prost-derive = "0.5.0"
structopt = "0.3.3"
http = "0.1.20"
tokio = "0.2.0-alpha.6"
tracing = "0.1.9"
tracing-subscriber = "0.1.5"
sled = "0.28.0"
dirs = "2.0.2"
serde = { version = "1.0.101", features = ["derive"] }
bincode = "1.2.0"

[build-dependencies]
tonic-build = "0.1.0-alpha.3"
